added classes to be targeted

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <span class="mdc-notched-outline">
           <span class="mdc-notched-outline__leading"></span>
           <span class="mdc-notched-outline__notch">
-            <span class="mdc-floating-label" id="my-label-id"></span>
+            <span class="mdc-floating-label input" id="my-label-id"></span>
           </span>
           <span class="mdc-notched-outline__trailing"></span>
         </span>
       </label>
     <button class="mdc-button mdc-button--raised">
         <div class="mdc-button__ripple"></div>
-        <span class="mdc-button__label">Search</span>
+        <span class="mdc-button__label search">Search</span>
       </button>
   </body>
 </html>
