--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <link rel="stylesheet" href="./assets/style.css"/>
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
+      <img
+      class="background-image"
+      src="./assets/pictures/move-background.jpeg"
+      alt="Movie background"
+    />
     <label class="mdc-text-field mdc-text-field--outlined">
         <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id">
         <span class="mdc-notched-outline">
@@ -25,5 +32,6 @@
         <div class="mdc-button__ripple"></div>
         <span class="mdc-button__label search">Search</span>
       </button>
+    </div>
   </body>
 </html>
