new picture, much better

--- a/index.html
+++ b/index.html
@@ -3,22 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/reset.css" />
     <link
       href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/style.css"/>
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="container">
       <img
-      class="background-image"
-      src="./assets/pictures/move-background.jpeg"
-      alt="Movie background"
-    />
-    <label class="mdc-text-field mdc-text-field--outlined">
-        <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id">
+        class="background-image"
+        src="./assets/pictures/movie-background.jpg"
+        alt="Movie background"
+      />
+      <label class="mdc-text-field mdc-text-field--outlined">
+        <input
+          type="text"
+          class="mdc-text-field__input"
+          aria-labelledby="my-label-id"
+        />
         <span class="mdc-notched-outline">
           <span class="mdc-notched-outline__leading"></span>
           <span class="mdc-notched-outline__notch">
@@ -27,7 +32,7 @@
           <span class="mdc-notched-outline__trailing"></span>
         </span>
       </label>
-    <button class="mdc-button mdc-button--raised">
+      <button class="mdc-button mdc-button--raised">
         <div class="mdc-button__ripple"></div>
         <span class="mdc-button__label search">Search</span>
       </button>
