reviewed changes for PR, input and search button working

--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
   </head>
   <body>
     <label class="mdc-text-field mdc-text-field--outlined">
-        <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id">
+        <input type="text" class="mdc-text-field__input input" aria-labelledby="my-label-id">
         <span class="mdc-notched-outline">
           <span class="mdc-notched-outline__leading"></span>
           <span class="mdc-notched-outline__notch">
-            <span class="mdc-floating-label input" id="my-label-id"></span>
+            <span class="mdc-floating-label" id="my-label-id"></span>
           </span>
           <span class="mdc-notched-outline__trailing"></span>
         </span>
       </label>
-    <button class="mdc-button mdc-button--raised">
+    <button class="mdc-button mdc-button--raised search">
         <div class="mdc-button__ripple"></div>
-        <span class="mdc-button__label search">Search</span>
+        <span class="mdc-button__label">Search</span>
       </button>
+
+      <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+      <script src='script.js'></script>
   </body>
 </html>
