--- a/index.html
+++ b/index.html
@@ -3,15 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<<<<<<< HEAD
-    <link rel="stylesheet" href="./assets/reset.css" />
-    <link
-      href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./assets/style.css" />
-=======
->>>>>>> staging-1
     <title>Document</title>
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet"/>
@@ -42,7 +33,7 @@
         <span class="mdc-notched-outline">
           <span class="mdc-notched-outline__leading"></span>
           <span class="mdc-notched-outline__notch">
-            <span class="mdc-floating-label input" id="my-label-id"></span>
+            <span class="mdc-floating-label" id="my-label-id"></span>
           </span>
           <span class="mdc-notched-outline__trailing"></span>
         </span>
@@ -108,6 +99,7 @@
     <footer class="container">
       <p>&copy; Projectx 2020</p>
     </footer>
+    <script src='script.js'></script>
   </body>
 </html>
 
