--- a/index.html
+++ b/index.html
@@ -3,27 +3,129 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <link
-      href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <!-- Bootstrap core CSS -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <title>Document</title>
+    <!-- Material Design Bootstrap -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
+
   <body>
-    <label class="mdc-text-field mdc-text-field--outlined">
-        <input type="text" class="mdc-text-field__input" aria-labelledby="my-label-id">
+      <img
+        class="background-image"
+        src="./assets/pictures/movie-background.jpg"
+        alt="Movie background"
+      />
+      <label class="mdc-text-field mdc-text-field--outlined">
+        <input
+          type="text"
+          class="mdc-text-field__input"
+          aria-labelledby="my-label-id"
+        />
         <span class="mdc-notched-outline">
           <span class="mdc-notched-outline__leading"></span>
           <span class="mdc-notched-outline__notch">
-            <span class="mdc-floating-label input" id="my-label-id"></span>
+            <span class="mdc-floating-label" id="my-label-id"></span>
           </span>
           <span class="mdc-notched-outline__trailing"></span>
         </span>
-      </label>
+    </label>
+
     <button class="mdc-button mdc-button--raised">
         <div class="mdc-button__ripple"></div>
         <span class="mdc-button__label search">Search</span>
-      </button>
+    </button>
+
+    <div class="container">
+
+      <h4 class="text-center py-4">Top Rated Movies</h4>
+      <div class="row">
+        <!--Card One-->
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <div class="view">
+            <img class="card-img-top" alt="photo">
+            <a href="#">
+              <div class="mask rgba-white-slight"></div>
+            </a>
+            </div>
+            <div class="card-body elegant-color white-text">
+              <h4 class="card-title">Movie Name</h4>
+              <p class="card-text white-text">Movie Snapshot</p>
+            </div>
+          </div>
+        </div>
+
+        <!--Card Two-->
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <div class="view">
+            <img class="card-img-top" alt="photo">
+            <a href="#">
+              <div class="mask rgba-white-slight"></div>
+            </a>
+            </div>
+            <div class="card-body elegant-color white-text">
+              <h4 class="card-title">Movie Name</h4>
+              <p class="card-text white-text">Movie Snapshot</p>
+            </div>
+          </div>
+        </div>
+
+        <!--Card Three-->
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <div class="view">
+            <img class="card-img-top" alt="photo">
+            <a href="#">
+              <div class="mask rgba-white-slight"></div>
+            </a>
+            </div>
+            <div class="card-body elegant-color white-text">
+              <h4 class="card-title">Movie Name</h4>
+              <p class="card-text white-text">Movie Snapshot</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <!--Footer-->
+    <footer class="container">
+      <p>&copy; Projectx 2020</p>
+    </footer>
+
+    <!-- JQuery -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    ></script>
+    <!-- Bootstrap tooltips -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"
+    ></script>
+    <!-- Bootstrap core JavaScript -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"
+    ></script>
+    <!-- MDB core JavaScript -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"
+    ></script>
+    <script src='./assets/script.js'></script>
   </body>
 </html>
+
