--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- Grid column -->
         <div class="col-lg-6 col-xs-6">
           <!--Card-->
-          <div class="card">
+          <div class="card bio">
             <!--Card image-->
             <div class="view">
               <img src="" class="card-img-top" alt="Actor image" />
