centered search box

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       src="./assets/pictures/movie-background.jpg"
       alt="Movie background"
     />
-    <div class="container">
-      <div class="row">
-        <div class="md-form input-group mb-3 col-lg-4 col-xs-6">
+    <div class="container w-100 h-100">
+      <div class="row align-items-center h-75">
+        <div class="md-form input-group mb-3 col-4 offset-md-4">
           <input
             type="text"
             class="form-control input-btn input"
@@ -78,19 +78,18 @@
           <!--/.Card-->
         </div>
       </div>
-    </div>
-    <div class="container">
-
-      <h4 class="text-center py-4">Top Rated Movies</h4>
-      <div class="row">
+      <!-- Temporary class to hide it from display DELETE LATER -->
+      <h4 class="text-center py-4 temp-class">Top Rated Movies</h4>
+      <!-- Temporary class to hide it from display DELETE LATER -->
+      <div class="row temp-class">
         <!--Card One-->
         <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="view">
-            <img class="card-img-top" alt="photo">
-            <a href="#">
-              <div class="mask rgba-white-slight"></div>
-            </a>
+              <img class="card-img-top" alt="photo" />
+              <a href="#">
+                <div class="mask rgba-white-slight"></div>
+              </a>
             </div>
             <div class="card-body elegant-color white-text">
               <h4 class="card-title">Movie Name</h4>
@@ -103,10 +102,10 @@
         <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="view">
-            <img class="card-img-top" alt="photo">
-            <a href="#">
-              <div class="mask rgba-white-slight"></div>
-            </a>
+              <img class="card-img-top" alt="photo" />
+              <a href="#">
+                <div class="mask rgba-white-slight"></div>
+              </a>
             </div>
             <div class="card-body elegant-color white-text">
               <h4 class="card-title">Movie Name</h4>
@@ -119,10 +118,10 @@
         <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="view">
-            <img class="card-img-top" alt="photo">
-            <a href="#">
-              <div class="mask rgba-white-slight"></div>
-            </a>
+              <img class="card-img-top" alt="photo" />
+              <a href="#">
+                <div class="mask rgba-white-slight"></div>
+              </a>
             </div>
             <div class="card-body elegant-color white-text">
               <h4 class="card-title">Movie Name</h4>
@@ -132,10 +131,11 @@
         </div>
       </div>
 
-    <!--Footer-->
-    <footer class="container">
-      <p>&copy; Projectx 2020</p>
-    </footer>
+      <!--Footer-->
+      <footer>
+        <p>&copy; Projectx 2020</p>
+      </footer>
+    </div>
 
     <!-- JQuery -->
     <script
@@ -157,7 +157,6 @@
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"
     ></script>
-    <script src='./assets/script.js'></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
-
