--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           />
           <div class="input-group-append">
             <button
-              class="btn btn-md btn-secondary m-0 px-3 input-btn"
+              class="btn btn-md btn-secondary m-0 px-3 input-btn search"
               type="button"
               id="MaterialButton-addon2"
             >
@@ -82,9 +82,9 @@
     <div class="container">
 
       <h4 class="text-center py-4">Top Rated Movies</h4>
-      <div class="row">
+      <div class="row topRated">
         <!--Card One-->
-        <div class="col-lg-4 col-md-6">
+        <!-- <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="view">
             <img class="card-img-top" alt="photo">
@@ -97,10 +97,10 @@
               <p class="card-text white-text">Movie Snapshot</p>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!--Card Two-->
-        <div class="col-lg-4 col-md-6">
+        <!-- <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="view">
             <img class="card-img-top" alt="photo">
@@ -113,10 +113,10 @@
               <p class="card-text white-text">Movie Snapshot</p>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!--Card Three-->
-        <div class="col-lg-4 col-md-6">
+        <!-- <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="view">
             <img class="card-img-top" alt="photo">
@@ -129,9 +129,9 @@
               <p class="card-text white-text">Movie Snapshot</p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
-
+    </div>
     <!--Footer-->
     <footer class="container">
       <p>&copy; Projectx 2020</p>
