--- a/index.html
+++ b/index.html
@@ -59,20 +59,20 @@
           <!--Card-->
           <div class="card bio">
             <!--Card image-->
-            <div class="view">
-              <img src="" class="card-img-top" alt="Actor image" />
+            <div class="view bio-img">
+              <!-- <img src="" class="card-img-top" alt="Actor image" />
               <a href="#">
                 <div class="mask rgba-white-slight"></div>
-              </a>
+              </a> -->
             </div>
             <!--Card content-->
-            <div class="card-body">
+            <div class="card-body card-bio">
               <!--Title-->
-              <h4 class="card-title">Actor Name</h4>
+              <!-- <h4 class="card-title">Actor Name</h4> -->
               <!--Text-->
-              <p class="card-text">Actor birthday</p>
+              <!-- <p class="card-text">Actor birthday</p>
               <p class="card-text">Birthplace</p>
-              <p class="card-text">Known for department</p>
+              <p class="card-text">Known for department</p> -->
             </div>
           </div>
           <!--/.Card-->
