clear text from bio div first

--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
           <!--Card-->
           <div class="card bio">
             <!--Card image-->
-            <div class="view bio-img">
+            <!-- <div class="view bio-img"> -->
               <!-- <img src="" class="card-img-top" alt="Actor image" />
               <a href="#">
                 <div class="mask rgba-white-slight"></div>
               </a> -->
-            </div>
+            <!-- </div> -->
             <!--Card content-->
-            <div class="card-body card-bio">
+            <!-- <div class="card-body card-bio"> -->
               <!--Title-->
               <!-- <h4 class="card-title">Actor Name</h4> -->
               <!--Text-->
               <!-- <p class="card-text">Actor birthday</p>
               <p class="card-text">Birthplace</p>
               <p class="card-text">Known for department</p> -->
-            </div>
+            <!-- </div> -->
           </div>
           <!--/.Card-->
         </div>
