--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           />
           <div class="input-group-append">
             <button
-              class="btn btn-md btn-secondary m-0 px-3 input-btn"
+              class="btn btn-md btn-secondary m-0 px-3 input-btn search"
               type="button"
               id="MaterialButton-addon2"
             >
