--- a/index.html
+++ b/index.html
@@ -57,24 +57,7 @@
         <!-- Grid column -->
         <div class="col-lg-6 col-xs-6">
           <!--Card-->
-          <div class="card bio">
-            <!--Card image-->
-            <div class="view">
-              <img src="" class="card-img-top" alt="Actor image" />
-              <a href="#">
-                <div class="mask rgba-white-slight"></div>
-              </a>
-            </div>
-            <!--Card content-->
-            <div class="card-body">
-              <!--Title-->
-              <h4 class="card-title">Actor Name</h4>
-              <!--Text-->
-              <p class="card-text">Actor birthday</p>
-              <p class="card-text">Birthplace</p>
-              <p class="card-text">Known for department</p>
-            </div>
-          </div>
+          <div class="card bio"></div>
           <!--/.Card-->
         </div>
       </div>
