--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
           Welcome to Project X.
         </h2>
         <p class="col-8 offset-md-2">
-          This is a one stop shop for you
-          to be able to find out everything you need to know about your favorite
-          actor/actress. Try searching your favorite
-          actor/actress below.
+          This is a one stop shop for you to be able to find out everything you
+          need to know about your favorite actor/actress. Try searching your
+          favorite actor/actress below.
         </p>
       </div>
       <div class="row align-items-start h-50">
