uncomment actor card

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       alt="Movie background"
     />
     <div class="container w-100 h-100">
-      <div class="row align-items-end text-center h-25">
+      <div class="row align-items-end text-center h-25 intro">
         <h2 class="col-8 offset-md-2">
           Welcome to Project X.
         </h2>
@@ -63,9 +63,9 @@
             </button>
           </div>
         </div>
-        <!-- <div class="col-lg-6 col-xs-6">
+        <div class="col-lg-6 col-xs-6">
           <div class="card bio"></div>
-        </div> -->
+        </div>
       </div>
     </div>
     <!-- <div class="container">
