--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
     <div class="container">
 
-      <h4 class="text-center py-4">Top Rated Movies</h4>
+      <h4 class="text-center py-4">Most Popular Movies</h4>
       <div class="row topRated">
         <!--Card One-->
         <!-- <div class="col-lg-4 col-md-6">
