--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     </div>
     <!-- <div class="container">
 
-      <h4 class="text-center py-4">Top Rated Movies</h4>
-      <div class="row topRated"> -->
-    <!--Card One-->
-    <!-- <div class="col-lg-4 col-md-6">
+      <h4 class="text-center py-4">Most Popular Movies</h4>
+      <div class="row topRated">
+        <!--Card One-->
+        <!-- <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="view">
               <img class="card-img-top" alt="photo" />
