--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     />
     <!-- Google Fonts -->
     <link
+      href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <!-- Bootstrap core CSS -->
     <link
@@ -34,7 +34,17 @@
       alt="Movie background"
     />
     <div class="container w-100 h-100">
-      <div class="row align-items-center h-75">
+      <div class="row align-items-end text-center h-25 intro">
+        <h2 class="col-8 offset-md-2">
+          Welcome to Project X.
+        </h2>
+        <p class="col-8 offset-md-2">
+          This is a one stop shop for you to be able to find out everything you
+          need to know about your favorite actor/actress. Try searching your
+          favorite actor/actress below.
+        </p>
+      </div>
+      <div class="row align-items-start h-50">
         <div class="md-form input-group mb-3 col-4 offset-md-4">
           <input
             type="text"
@@ -53,21 +63,17 @@
             </button>
           </div>
         </div>
-        <div class="col-lg-2"></div>
-        <!-- Grid column -->
         <div class="col-lg-6 col-xs-6">
-          <!--Card-->
           <div class="card bio"></div>
-          <!--/.Card-->
         </div>
       </div>
     </div>
-    <div class="container">
+    <!-- <div class="container">
 
       <h4 class="text-center py-4">Top Rated Movies</h4>
-      <div class="row topRated">
-        <!--Card One-->
-        <!-- <div class="col-lg-4 col-md-6">
+      <div class="row topRated"> -->
+    <!--Card One-->
+    <!-- <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="view">
               <img class="card-img-top" alt="photo" />
@@ -82,8 +88,8 @@
           </div>
         </div> -->
 
-        <!--Card Two-->
-        <!-- <div class="col-lg-4 col-md-6">
+    <!--Card Two-->
+    <!-- <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="view">
               <img class="card-img-top" alt="photo" />
@@ -98,8 +104,8 @@
           </div>
         </div> -->
 
-        <!--Card Three-->
-        <!-- <div class="col-lg-4 col-md-6">
+    <!--Card Three-->
+    <!-- <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="view">
               <img class="card-img-top" alt="photo" />
@@ -113,21 +119,12 @@
             </div>
           </div>
         </div> -->
-      </div>
-<<<<<<< HEAD
-    </div>
+    <!-- </div>
+    </div> -->
     <!--Footer-->
     <footer class="container">
       <p>&copy; Projectx 2020</p>
     </footer>
-=======
-
-      <!--Footer-->
-      <footer>
-        <p>&copy; Projectx 2020</p>
-      </footer>
-    </div>
->>>>>>> staging-2
 
     <!-- JQuery -->
     <script
