--- a/index.html
+++ b/index.html
@@ -68,59 +68,11 @@
         </div>
       </div>
     </div>
-    <!-- <div class="container">
+    <div class="container">
 
       <h4 class="text-center py-4">Most Popular Movies</h4>
-      <div class="row topRated">
-        <!--Card One-->
-        <!-- <div class="col-lg-4 col-md-6">
-          <div class="card">
-            <div class="view">
-              <img class="card-img-top" alt="photo" />
-              <a href="#">
-                <div class="mask rgba-white-slight"></div>
-              </a>
-            </div>
-            <div class="card-body elegant-color white-text">
-              <h4 class="card-title">Movie Name</h4>
-              <p class="card-text white-text">Movie Snapshot</p>
-            </div>
-          </div>
-        </div> -->
-
-    <!--Card Two-->
-    <!-- <div class="col-lg-4 col-md-6">
-          <div class="card">
-            <div class="view">
-              <img class="card-img-top" alt="photo" />
-              <a href="#">
-                <div class="mask rgba-white-slight"></div>
-              </a>
-            </div>
-            <div class="card-body elegant-color white-text">
-              <h4 class="card-title">Movie Name</h4>
-              <p class="card-text white-text">Movie Snapshot</p>
-            </div>
-          </div>
-        </div> -->
-
-    <!--Card Three-->
-    <!-- <div class="col-lg-4 col-md-6">
-          <div class="card">
-            <div class="view">
-              <img class="card-img-top" alt="photo" />
-              <a href="#">
-                <div class="mask rgba-white-slight"></div>
-              </a>
-            </div>
-            <div class="card-body elegant-color white-text">
-              <h4 class="card-title">Movie Name</h4>
-              <p class="card-text white-text">Movie Snapshot</p>
-            </div>
-          </div>
-        </div> -->
-    <!-- </div>
-    </div> -->
+      <div class="row topRated"></div>
+    </div>
     <!--Footer-->
     <footer class="container">
       <p>&copy; Projectx 2020</p>
