Adding NavBar and Footer

--- a/index.html
+++ b/index.html
@@ -33,6 +33,31 @@
       src="./assets/pictures/movie-background.jpg"
       alt="Movie background"
     />
+
+     <!--MDB BootStrap Navbar -->
+     <nav class="mb-1 navbar navbar-expand-sm navbar-dark secondary-color cyan darken-3 sticky-top">
+      <a class="navbar-brand" href="#">Actor Search</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555"
+          aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
+          <ul class="navbar-nav mr-auto text-dark">
+          <li class="nav-item">
+              <a class="nav-link" href="#">About
+              </a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Feedback</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+          </li>
+          </ul>
+      </div>
+      </nav>
+      <!--/.Navbar -->
+  
     <div class="container w-100 h-100">
       <div class="row align-items-center h-75">
         <div class="md-form input-group mb-3 col-4 offset-md-4">
@@ -114,20 +139,12 @@
           </div>
         </div> -->
       </div>
-<<<<<<< HEAD
     </div>
     <!--Footer-->
-    <footer class="container">
-      <p>&copy; Projectx 2020</p>
+    <footer id="site-footer" class="container text-center font-dark">
+      <p>&copy; ProjectX 2020:<a href="#" target="_blank"> ActorSearch.com </a>
+      </p>
     </footer>
-=======
-
-      <!--Footer-->
-      <footer>
-        <p>&copy; Projectx 2020</p>
-      </footer>
-    </div>
->>>>>>> staging-2
 
     <!-- JQuery -->
     <script
