--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
       alt="Movie background"
     />
     <div class="container w-100 h-100">
-      <div class="row align-items-end text-center h-25 intro">
-        <h2 class="col-8 offset-md-2">
+      <div class="row align-items-end justify-content-center text-center h-25 intro">
+        <h2 class="col-8">
           Welcome to Project X.
         </h2>
-        <p class="col-8 offset-md-2">
+        <p class="col-8">
           This is a one stop shop for you to be able to find out everything you
-          need to know about your favorite actor/actress. Try searching your
-          favorite actor/actress below.
+          need to know about your favorite actor. Try searching your
+          favorite actor below.
         </p>
       </div>
-      <div class="row align-items-start h-50">
-        <div class="md-form input-group mb-3 col-4 offset-md-4">
+      <div class="row align-items-start justify-content-center h-50">
+        <div class="md-form input-group col-xl-3 col-lg-4 col-md-5 col-sm-6">
           <input
             type="text"
             class="form-control input-btn input"
-            placeholder="Actor/Actress name"
-            aria-label="Actor/Actress name"
+            placeholder="Actor name"
+            aria-label="Actor name"
             aria-describedby="MaterialButton-addon2"
           />
           <div class="input-group-append">
@@ -63,7 +63,7 @@
             </button>
           </div>
         </div>
-        <div class="col-lg-6 col-xs-6">
+        <div class="bio-container">
           <div class="card bio"></div>
         </div>
       </div>
