--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
       alt="Movie background"
     />
     <div class="container w-100 h-100">
-      <div class="row align-items-end justify-content-center text-center h-25 intro">
+      <div
+        class="row align-items-end justify-content-center text-center h-25 intro"
+      >
         <h2 class="col-8">
           Welcome to Project X.
         </h2>
         <p class="col-8">
           This is a one stop shop for you to be able to find out everything you
-          need to know about your favorite actor. Try searching your
-          favorite actor below.
+          need to know about your favorite actor. Try searching your favorite
+          actor below.
         </p>
       </div>
       <div class="row align-items-start justify-content-center h-50">
@@ -69,7 +71,6 @@
       </div>
     </div>
     <div class="container">
-
       <h4 class="text-center py-4">Most Popular Movies</h4>
       <div class="row topRated"></div>
     </div>
