--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       src="./assets/pictures/movie-background.jpg"
       alt="Movie background"
     />
-    <div class="container w-100 h-100">
+    <div class="container">
       <div
-        class="row align-items-end justify-content-center text-center h-25 intro"
+        class="row align-items-end justify-content-center text-center intro"
       >
         <h2 class="col-8">
           Welcome to Project X.
@@ -46,7 +46,7 @@
           actor below.
         </p>
       </div>
-      <div class="row align-items-start justify-content-center h-50">
+      <div class="row align-items-start justify-content-center">
         <div class="md-form input-group col-xl-3 col-lg-4 col-md-5 col-sm-6">
           <input
             type="text"
