--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
       src="./assets/pictures/movie-background.jpg"
       alt="Movie background"
     />
-
-     <!--MDB BootStrap Navbar -->
-     <nav class="mb-1 navbar navbar-expand-sm navbar-dark secondary-color cyan darken-3 sticky-top">
+    <!--MDB BootStrap Navbar -->
+    <nav class="mb-1 navbar navbar-expand-sm navbar-dark secondary-color cyan darken-3 sticky-top">
       <a class="navbar-brand" href="#">Actor Search</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555"
           aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,25 +56,29 @@
       </div>
       </nav>
       <!--/.Navbar -->
-  
-    <div class="container w-100 h-100">
-      <div class="row align-items-end text-center h-25 intro">
-        <h2 class="col-8 offset-md-2">
+    <div class="container">
+      <div
+        class="row align-items-end justify-content-center text-center intro"
+      >
+        <h2 class="col-8">
+
+     
+        <h2 class="col-8 justify-content-center">
           Welcome to Project X.
         </h2>
-        <p class="col-8 offset-md-2">
+        <p class="col-8">
           This is a one stop shop for you to be able to find out everything you
-          need to know about your favorite actor/actress. Try searching your
-          favorite actor/actress below.
+          need to know about your favorite actor. Try searching your favorite
+          actor below.
         </p>
       </div>
-      <div class="row align-items-start h-50">
-        <div class="md-form input-group mb-3 col-4 offset-md-4">
+      <div class="row align-items-start justify-content-center">
+        <div class="md-form input-group col-xl-3 col-lg-4 col-md-5 col-sm-6">
           <input
             type="text"
             class="form-control input-btn input"
-            placeholder="Actor/Actress name"
-            aria-label="Actor/Actress name"
+            placeholder="Actor name"
+            aria-label="Actor name"
             aria-describedby="MaterialButton-addon2"
           />
           <div class="input-group-append">
@@ -88,7 +91,7 @@
             </button>
           </div>
         </div>
-        <div class="col-lg-6 col-xs-6">
+        <div class="bio-container">
           <div class="card bio"></div>
         </div>
       </div>
