--- a/index.html
+++ b/index.html
@@ -33,24 +33,52 @@
       src="./assets/pictures/movie-background.jpg"
       alt="Movie background"
     />
-    <div class="container w-100 h-100">
-      <div class="row align-items-end text-center h-25 intro">
-        <h2 class="col-8 offset-md-2">
+    <!--MDB BootStrap Navbar -->
+    <nav class="mb-1 navbar navbar-expand-sm navbar-dark secondary-color cyan darken-3 sticky-top">
+      <a class="navbar-brand" href="#">Actor Search</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555"
+          aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
+          <ul class="navbar-nav mr-auto text-dark">
+          <li class="nav-item">
+              <a class="nav-link" href="#">About
+              </a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Feedback</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+          </li>
+          </ul>
+      </div>
+      </nav>
+      <!--/.Navbar -->
+    <div class="container">
+      <div
+        class="row align-items-end justify-content-center text-center intro"
+      >
+        <h2 class="col-8">
+
+     
+        <h2 class="col-8 justify-content-center">
           Welcome to Project X.
         </h2>
-        <p class="col-8 offset-md-2">
+        <p class="col-8">
           This is a one stop shop for you to be able to find out everything you
-          need to know about your favorite actor/actress. Try searching your
-          favorite actor/actress below.
+          need to know about your favorite actor. Try searching your favorite
+          actor below.
         </p>
       </div>
-      <div class="row align-items-start h-50">
-        <div class="md-form input-group mb-3 col-4 offset-md-4">
+      <div class="row align-items-start justify-content-center">
+        <div class="md-form input-group col-xl-3 col-lg-4 col-md-5 col-sm-6">
           <input
             type="text"
             class="form-control input-btn input"
-            placeholder="Actor/Actress name"
-            aria-label="Actor/Actress name"
+            placeholder="Actor name"
+            aria-label="Actor name"
             aria-describedby="MaterialButton-addon2"
           />
           <div class="input-group-append">
@@ -63,19 +91,19 @@
             </button>
           </div>
         </div>
-        <div class="col-lg-6 col-xs-6">
+        <div class="bio-container">
           <div class="card bio"></div>
         </div>
       </div>
     </div>
     <div class="container">
-
       <h4 class="text-center py-4">Most Popular Movies</h4>
       <div class="row topRated"></div>
     </div>
     <!--Footer-->
-    <footer class="container">
-      <p>&copy; Projectx 2020</p>
+    <footer id="site-footer" class="container text-center font-dark">
+      <p>&copy; ProjectX 2020:<a href="#" target="_blank"> ActorSearch.com </a>
+      </p>
     </footer>
 
     <!-- JQuery -->
