--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
       <div class="row">
         <div class="container col-xl-3 col-lg-4 col-md-5 col-sm-6">
-          <div class="row align-items-end justify-content-center">
+          <div class="row">
             <div class="md-form input-group">
               <input
                 type="text"
@@ -97,13 +97,20 @@
               </div>
             </div>
           </div>
-          <div class="row align-items-end justify-content-center">
+          <div class="row">
             <div class="md-form input-group">
               <select class="browser-default custom-select">
-                <option selected>Open this select menu</option>
+                <option selected># of movies to display</option>
                 <option value="1">One</option>
                 <option value="2">Two</option>
                 <option value="3">Three</option>
+                <option value="4">Four</option>
+                <option value="5">Five</option>
+                <option value="6">Six</option>
+                <option value="7">Seven</option>
+                <option value="8">Eight</option>
+                <option value="9">Nine</option>
+                <option value="10">Ten</option>
               </select>
             </div>
           </div>
