added local storage

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             </button>
           </div>
         </div>
+        <div class = "previousSearches">
+
+        </div>
         <div class="bio-container">
           <div class="card bio"></div>
         </div>
