--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="icon" href="./assets/pictures/film-icon.png"/>
     <title>Actor Search</title>
   </head>
 
