--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="row align-items-end justify-content-center text-center intro">
         <h2 class="col-8 justify-content-center">
-          Welcome to Project X.
+          Welcome to Actor Search.
         </h2>
         <p class="col-8">
           This is a one stop shop for you to be able to find out everything you
@@ -127,7 +127,7 @@
     <!--Footer-->
     <footer id="site-footer" class="container text-center font-dark">
       <p>
-        &copy; ProjectX 2020:<a href="#" target="_blank"> ActorSearch.com </a>
+        &copy; ActorSearch 2020:<a href="https://sean-marten.github.io/project-1/" target="_blank"> ActorSearch.com </a>
       </p>
     </footer>
 
