number input grabbing correct amount of movies

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             </div>
           </div>
           <div class="row">
-            <div class="md-form input-group">
-              <select class="browser-default custom-select">
+            <div class="md-form input-group ">
+              <select class="browser-default custom-select numOfMovies">
                 <option selected># of movies to display</option>
                 <option value="1">One</option>
                 <option value="2">Two</option>
