--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
               </div>
             </div>
           </div>
-          <div class="row">
+          <div class="row ">
             <div class="md-form input-group ">
               <select class="browser-default custom-select numOfMovies">
-                <option selected># of movies to display</option>
+                <option selected value="0"># of movies to display</option>
                 <option value="1">One</option>
                 <option value="2">Two</option>
                 <option value="3">Three</option>
@@ -112,6 +112,8 @@
                 <option value="9">Nine</option>
                 <option value="10">Ten</option>
               </select>
+            </div>
+            <div class ="numOfMoviesError">
             </div>
           </div>
         </div>
