added error message if actor DNE

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
               </div>
             </div>
           </div>
+          <div class="row errorMsg"></div>
           <div class="row">
             <div class="md-form input-group">
               <select class="browser-default custom-select">
