Num of movies be (#26)
* number input grabbing correct amount of movies

* created error message if number was not selected, does not allow search'

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="md-form input-group">
-              <select class="browser-default custom-select">
-                <option selected># of movies to display</option>
+          <div class="row ">
+            <div class="md-form input-group ">
+              <select class="browser-default custom-select numOfMovies">
+                <option selected value="0"># of movies to display</option>
                 <option value="1">One</option>
                 <option value="2">Two</option>
                 <option value="3">Three</option>
@@ -113,6 +113,8 @@
                 <option value="9">Nine</option>
                 <option value="10">Ten</option>
               </select>
+            </div>
+            <div class ="numOfMoviesError">
             </div>
           </div>
         </div>
