--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
             <div class ="numOfMoviesError">
             </div>
           </div>
+          <div class = "previousSearches">
+          </div>
         </div>
+        
         <div class="bio-container">
           <div class="card bio"></div>
         </div>
