--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/style.css" />
-    <link rel="icon" href="./assets/pictures/film-icon.png"/>
+    <link rel="icon" href="./assets/pictures/film-icon.png" />
     <title>Actor Search</title>
   </head>
 
@@ -98,8 +98,8 @@
               </div>
             </div>
           </div>
-          <div class="row ">
-            <div class="md-form input-group ">
+          <div class="row">
+            <div class="md-form input-group">
               <select class="browser-default custom-select numOfMovies">
                 <option selected value="0"># of movies to display</option>
                 <option value="1">One</option>
@@ -114,13 +114,11 @@
                 <option value="10">Ten</option>
               </select>
             </div>
-            <div class ="numOfMoviesError">
-            </div>
+            <div class="numOfMoviesError"></div>
           </div>
-          <div class = "previousSearches">
-          </div>
+          <div class="previousSearches"></div>
         </div>
-        
+
         <div class="bio-container">
           <div class="card bio"></div>
         </div>
@@ -133,7 +131,12 @@
     <!--Footer-->
     <footer id="site-footer" class="container text-center font-dark">
       <p>
-        &copy; ActorSearch 2020:<a href="https://sean-marten.github.io/project-1/" target="_blank"> ActorSearch.com </a>
+        &copy; ActorSearch 2020:<a
+          href="https://sean-marten.github.io/project-1/"
+          target="_blank"
+        >
+          ActorSearch.com
+        </a>
       </p>
     </footer>
 
