Changed font colors, relative path

--- a/team.html
+++ b/team.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     
-  <a class="btn btn-outline-default btn-rounded waves-effect" href="/Users/Vny/BootCamp/Project/project/project-1/index.html" role="button">Actor Search</a>
+  <a class="btn btn-outline-default btn-rounded waves-effect" href="index.html" role="button">Actor Search</a>
    <!-- Section: Team v.1 -->
     <section class="team-section text-center my-5">
         <!-- Section heading -->
